nexflow-toolchain/backend/parser/generated/proc/ProcDSLParser.py
# Generated from grammar/ProcDSL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ProcDSLParser ( Parser ):

    grammarFileName = "ProcDSL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'process'", "'end'", "'parallelism'", 
                     "'hint'", "'partition'", "'by'", "'time'", "'watermark'", 
                     "'delay'", "'late'", "'data'", "'to'", "'allowed'", 
                     "'lateness'", "'mode'", "'stream'", "'batch'", "'micro_batch'", 
                     "'receive'", "'from'", "'project'", "'except'", "'schema'", 
                     "'store'", "'in'", "'match'", "'on'", "'enrich'", "'using'", 
                     "'select'", "'transform'", "'route'", "'aggregate'", 
                     "'merge'", "','", "'into'", "'window'", "'tumbling'", 
                     "'sliding'", "'every'", "'session'", "'gap'", "'join'", 
                     "'with'", "'within'", "'type'", "'inner'", "'left'", 
                     "'right'", "'outer'", "'await'", "'until'", "'arrives'", 
                     "'matching'", "'timeout'", "'hold'", "'keyed'", "'complete'", 
                     "'when'", "'count'", "'marker'", "'received'", "'emit'", 
                     "'dead_letter'", "'skip'", "'fanout'", "'broadcast'", 
                     "'round_robin'", "'commit'", "'completion'", "'failure'", 
                     "'correlation'", "'include'", "'state'", "'uses'", 
                     "'local'", "'counter'", "'gauge'", "'map'", "'list'", 
                     "'ttl'", "'absolute'", "'cleanup'", "'on_checkpoint'", 
                     "'on_access'", "'background'", "'buffer'", "'fifo'", 
                     "'lifo'", "'priority'", "'error'", "'lookup'", "'rule'", 
                     "'retry'", "'checkpoint'", "'slow'", "'strategy'", 
                     "'block'", "'drop'", "'sample'", "'alert'", "'after'", 
                     "'.'", "'seconds'", "'second'", "'minutes'", "'minute'", 
                     "'hours'", "'hour'", "'days'", "'day'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'>='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "INTEGER", "NUMBER", "DURATION_LITERAL", "IDENTIFIER", 
                      "STRING", "GTE", "COMMENT", "WS" ]

    RULE_program = 0
    RULE_processDefinition = 1
    RULE_processName = 2
    RULE_executionBlock = 3
    RULE_parallelismDecl = 4
    RULE_partitionDecl = 5
    RULE_timeDecl = 6
    RULE_watermarkDecl = 7
    RULE_lateDataDecl = 8
    RULE_latenessDecl = 9
    RULE_modeDecl = 10
    RULE_modeType = 11
    RULE_inputBlock = 12
    RULE_receiveDecl = 13
    RULE_projectClause = 14
    RULE_schemaDecl = 15
    RULE_receiveAction = 16
    RULE_storeAction = 17
    RULE_matchAction = 18
    RULE_processingBlock = 19
    RULE_enrichDecl = 20
    RULE_selectClause = 21
    RULE_transformDecl = 22
    RULE_routeDecl = 23
    RULE_aggregateDecl = 24
    RULE_mergeDecl = 25
    RULE_windowDecl = 26
    RULE_windowType = 27
    RULE_windowOptions = 28
    RULE_joinDecl = 29
    RULE_joinType = 30
    RULE_correlationBlock = 31
    RULE_awaitDecl = 32
    RULE_holdDecl = 33
    RULE_completionClause = 34
    RULE_completionCondition = 35
    RULE_timeoutAction = 36
    RULE_outputBlock = 37
    RULE_outputDecl = 38
    RULE_emitDecl = 39
    RULE_fanoutDecl = 40
    RULE_completionBlock = 41
    RULE_completionDecl = 42
    RULE_onCommitDecl = 43
    RULE_onCommitFailureDecl = 44
    RULE_correlationDecl = 45
    RULE_includeDecl = 46
    RULE_stateBlock = 47
    RULE_stateDecl = 48
    RULE_usesDecl = 49
    RULE_localDecl = 50
    RULE_stateType = 51
    RULE_ttlDecl = 52
    RULE_ttlType = 53
    RULE_cleanupDecl = 54
    RULE_cleanupStrategy = 55
    RULE_bufferDecl = 56
    RULE_bufferType = 57
    RULE_resilienceBlock = 58
    RULE_errorBlock = 59
    RULE_errorHandler = 60
    RULE_errorType = 61
    RULE_errorAction = 62
    RULE_checkpointBlock = 63
    RULE_backpressureBlock = 64
    RULE_backpressureStrategy = 65
    RULE_alertDecl = 66
    RULE_fieldPath = 67
    RULE_fieldList = 68
    RULE_duration = 69
    RULE_timeUnit = 70

    ruleNames =  [ "program", "processDefinition", "processName", "executionBlock", 
                   "parallelismDecl", "partitionDecl", "timeDecl", "watermarkDecl", 
                   "lateDataDecl", "latenessDecl", "modeDecl", "modeType", 
                   "inputBlock", "receiveDecl", "projectClause", "schemaDecl", 
                   "receiveAction", "storeAction", "matchAction", "processingBlock", 
                   "enrichDecl", "selectClause", "transformDecl", "routeDecl", 
                   "aggregateDecl", "mergeDecl", "windowDecl", "windowType", 
                   "windowOptions", "joinDecl", "joinType", "correlationBlock", 
                   "awaitDecl", "holdDecl", "completionClause", "completionCondition", 
                   "timeoutAction", "outputBlock", "outputDecl", "emitDecl", 
                   "fanoutDecl", "completionBlock", "completionDecl", "onCommitDecl", 
                   "onCommitFailureDecl", "correlationDecl", "includeDecl", 
                   "stateBlock", "stateDecl", "usesDecl", "localDecl", "stateType", 
                   "ttlDecl", "ttlType", "cleanupDecl", "cleanupStrategy", 
                   "bufferDecl", "bufferType", "resilienceBlock", "errorBlock", 
                   "errorHandler", "errorType", "errorAction", "checkpointBlock", 
                   "backpressureBlock", "backpressureStrategy", "alertDecl", 
                   "fieldPath", "fieldList", "duration", "timeUnit" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    T__86=87
    T__87=88
    T__88=89
    T__89=90
    T__90=91
    T__91=92
    T__92=93
    T__93=94
    T__94=95
    T__95=96
    T__96=97
    T__97=98
    T__98=99
    T__99=100
    T__100=101
    T__101=102
    T__102=103
    T__103=104
    T__104=105
    T__105=106
    T__106=107
    T__107=108
    T__108=109
    T__109=110
    T__110=111
    INTEGER=112
    NUMBER=113
    DURATION_LITERAL=114
    IDENTIFIER=115
    STRING=116
    GTE=117
    COMMENT=118
    WS=119

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ProcDSLParser.EOF, 0)

        def processDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProcDSLParser.ProcessDefinitionContext)
            else:
                return self.getTypedRuleContext(ProcDSLParser.ProcessDefinitionContext,i)


        def getRuleIndex(self):
            return ProcDSLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ProcDSLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 142
                self.processDefinition()
                self.state = 145 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

            self.state = 147
            self.match(ProcDSLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcessDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def processName(self):
            return self.getTypedRuleContext(ProcDSLParser.ProcessNameContext,0)


        def inputBlock(self):
            return self.getTypedRuleContext(ProcDSLParser.InputBlockContext,0)


        def executionBlock(self):
            return self.getTypedRuleContext(ProcDSLParser.ExecutionBlockContext,0)


        def processingBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProcDSLParser.ProcessingBlockContext)
            else:
                return self.getTypedRuleContext(ProcDSLParser.ProcessingBlockContext,i)


        def correlationBlock(self):
            return self.getTypedRuleContext(ProcDSLParser.CorrelationBlockContext,0)


        def outputBlock(self):
            return self.getTypedRuleContext(ProcDSLParser.OutputBlockContext,0)


        def completionBlock(self):
            return self.getTypedRuleContext(ProcDSLParser.CompletionBlockContext,0)


        def stateBlock(self):
            return self.getTypedRuleContext(ProcDSLParser.StateBlockContext,0)


        def resilienceBlock(self):
            return self.getTypedRuleContext(ProcDSLParser.ResilienceBlockContext,0)


        def getRuleIndex(self):
            return ProcDSLParser.RULE_processDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcessDefinition" ):
                listener.enterProcessDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcessDefinition" ):
                listener.exitProcessDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcessDefinition" ):
                return visitor.visitProcessDefinition(self)
            else:
                return visitor.visitChildren(self)




    def processDefinition(self):

        localctx = ProcDSLParser.ProcessDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_processDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(ProcDSLParser.T__0)
            self.state = 150
            self.processName()
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 151
                self.executionBlock()


            self.state = 154
            self.inputBlock()
            self.state = 158
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 155
                    self.processingBlock() 
                self.state = 160
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==51 or _la==56:
                self.state = 161
                self.correlationBlock()


            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32 or _la==63:
                self.state = 164
                self.outputBlock()


            self.state = 168
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 167
                self.completionBlock()


            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==74:
                self.state = 170
                self.stateBlock()


            self.state = 174
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 173
                self.resilienceBlock()


            self.state = 176
            self.match(ProcDSLParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcessNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ProcDSLParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return ProcDSLParser.RULE_processName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcessName" ):
                listener.enterProcessName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcessName" ):
                listener.exitProcessName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcessName" ):
                return visitor.visitProcessName(self)
            else:
                return visitor.visitChildren(self)




    def processName(self):

        localctx = ProcDSLParser.ProcessNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_processName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.match(ProcDSLParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExecutionBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parallelismDecl(self):
            return self.getTypedRuleContext(ProcDSLParser.ParallelismDeclContext,0)


        def partitionDecl(self):
            return self.getTypedRuleContext(ProcDSLParser.PartitionDeclContext,0)


        def timeDecl(self):
            return self.getTypedRuleContext(ProcDSLParser.TimeDeclContext,0)


        def modeDecl(self):
            return self.getTypedRuleContext(ProcDSLParser.ModeDeclContext,0)


        def getRuleIndex(self):
            return ProcDSLParser.RULE_executionBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExecutionBlock" ):
                listener.enterExecutionBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExecutionBlock" ):
                listener.exitExecutionBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExecutionBlock" ):
                return visitor.visitExecutionBlock(self)
            else:
                return visitor.visitChildren(self)




    def executionBlock(self):

        localctx = ProcDSLParser.ExecutionBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_executionBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 180
                self.parallelismDecl()


            self.state = 184
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 183
                self.partitionDecl()


            self.state = 187
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 186
                self.timeDecl()


            self.state = 190
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15:
                self.state = 189
                self.modeDecl()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParallelismDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(ProcDSLParser.INTEGER, 0)

        def getRuleIndex(self):
            return ProcDSLParser.RULE_parallelismDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParallelismDecl" ):
                listener.enterParallelismDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParallelismDecl" ):
                listener.exitParallelismDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParallelismDecl" ):
                return visitor.visitParallelismDecl(self)
            else:
                return visitor.visitChildren(self)




    def parallelismDecl(self):

        localctx = ProcDSLParser.ParallelismDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parallelismDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 192
            self.match(ProcDSLParser.T__2)
            self.state = 194
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 193
                self.match(ProcDSLParser.T__3)


            self.state = 196
            self.match(ProcDSLParser.INTEGER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PartitionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fieldList(self):
            return self.getTypedRuleContext(ProcDSLParser.FieldListContext,0)

